--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ web:
   volumes:
     - ./nginx.conf:/etc/nginx/nginx.conf:ro
   environment:
-    - VIRTUAL_HOST
+    - VIRTUAL_HOST=forum.supermarches-cooperatifs.test
 app:
   image: indiehosters/discourse
   volumes:
@@ -18,7 +18,7 @@ app:
   env_file:
     - ./env
   environment:
-    - DISCOURSE_HOSTNAME=$VIRTUAL_HOST
+    - DISCOURSE_HOSTNAME=forum.supermarches-cooperatifs.test
 sidekiq:
   image: indiehosters/discourse
   command: bundle exec sidekiq -q critical -q default -q low -v
@@ -28,7 +28,7 @@ sidekiq:
   env_file:
     - ./env
   environment:
-    - DISCOURSE_HOSTNAME=$VIRTUAL_HOST
+    - DISCOURSE_HOSTNAME=forum.supermarches-cooperatifs.test
   volumes_from:
     - app
 postgres:
